--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -7,13 +7,25 @@
     text-align: center;
     
 }
+.titulo{
+    width: 70%;
+    height: 70%;
+    text-align: center;
+}
 .menu{
     
     display: flex;
-    align-items: end;
+    margin-left: 70%;
     position:sticky;
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
+    
+}
+i{
+    display:flex;
+    padding: 6px;
+    margin: 10px;
+    
 }
 main{
     background-color: rgb(221, 133, 10);
@@ -38,6 +50,9 @@ h1{
 .elementos{
     text-align: center;
     align-items: center;
+    display: block;  
+    
+   
     
 }
 
@@ -46,6 +61,11 @@ input.formulario{
     display: flex;
     align-items: flex-end;
     padding: 3%;
+}
+
+h2{
+    text-align: center;
+    display: flex;
 }
 
 
