--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -1,12 +1,28 @@
-.barra{
+
+nav{
+    
     display: flex;
-    background-image: url(/img/images.jpeg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    color: ghostwhite;
-    text-align: center;
+    justify-content:space-between; 
+    background-color:yellow;
+    /* background-size: 100%; */
+    padding: 0px 60px; 
+    height: 60px;
+    /* margin-bottom: 0px; */
+    align-items: center;
+    /* gap: 20px; */
     
 }
+
+.navegador a{
+  
+    display:flex;
+    text-decoration: none;
+    color:black;
+    line-height: 60px;
+    font-size: 18px;
+
+}
+
 .titulo{
     width: 70%;
     height: 70%;
@@ -27,18 +43,33 @@ i{
     margin: 10px;
     
 }
+
 main{
-    background-color: rgb(221, 133, 10);
+    /* background-color: rgb(221, 133, 10); */
     border: none;
     font-family: "Nanum Gothic Coding", monospace;
     font-weight: 400;
     font-style: normal;
 }
+.barra{
+    display: flex;
+    background-image: url(/img/images.jpeg);
+    background-repeat: no-repeat;
+    background-size: 100%; 
+    color: ghostwhite;
+    text-align: center;
+    
+}
 h1{
     text-align: center;
     
 }
+.form{
+
+}
 .formulario{
+    background-color: rgb(255, 217, 0);
+    
     border: 4px solid;
     align-items: center;
     min-width: 50%;
@@ -66,6 +97,20 @@ input.formulario{
 h2{
     text-align: center;
     display: flex;
+}
+footer {
+    display: flex;
+    justify-content:space-around;
+    background-color: black;
+    padding: 15px 15px;
+    margin-top: 15px;
+}
+footer a {
+    display: flex;
+    text-decoration: none;
+    color: white;
+   
+
 }
 
 
