--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -28,15 +28,7 @@ nav{
     height: 70%;
     text-align: center;
 }
-.menu{
-    
-    display: flex;
-    margin-left: 70%;
-    position:sticky;
-    width: 50%;
-    height: 50%;
-    
-}
+
 i{
     display:flex;
     padding: 6px;
@@ -65,34 +57,25 @@ h1{
     
 }
 .form{
-
+    display: flex;
+    width: auto;
+    height: auto;
+    align-items: center;
+    
 }
 .formulario{
-    background-color: rgb(255, 217, 0);
+    background-color: yellow;
+    margin: auto;
+    border: 5px solid rgb(57, 54, 54);
     
-    border: 4px solid;
-    align-items: center;
-    min-width: 50%;
-    min-height: 50%;
-    padding: auto;
+    
 
 }
 
-.elementos{
-    text-align: center;
-    align-items: center;
-    display: block;  
-    
-   
-    
-}
 
-input.formulario{
-    
-    display: flex;
-    align-items: flex-end;
-    padding: 3%;
-}
+
+
+
 
 h2{
     text-align: center;
@@ -111,6 +94,26 @@ footer a {
     color: white;
    
 
+}
+
+.campo label{
+    margin-bottom: 10px;
+    display: block;
+
+}
+
+.campo input{
+    width: 70%;
+    padding: 20px;
+    border-radius: 50px;
+}
+
+.button {
+    margin: 15px;
+    color: black;
+    background-color: grey;
+    width: 70%;
+    
 }
 
 
