--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -23,10 +23,15 @@ nav{
 
 }
 
+.navegador a:hover{
+    background-color: black;
+    color: blanchedalmond;
+}
+
 .titulo{
-    width: 70%;
-    height: 70%;
-    text-align: center;
+    width: 100%;
+    height: 100%;
+    
 }
 
 i{
@@ -61,25 +66,25 @@ h1{
     width: auto;
     height: auto;
     align-items: center;
+    margin:auto;
+    
     
 }
 .formulario{
     background-color: yellow;
     margin: auto;
-    border: 5px solid rgb(57, 54, 54);
-    
-    
+    border: 5px solid rgb(57, 54, 54)
 
 }
 
-
-
-
-
-
 h2{
-    text-align: center;
+    width: auto;
+    height: auto;
     display: flex;
+    text-align: center;
+}
+h3{
+    padding: 20px;
 }
 footer {
     display: flex;
@@ -99,21 +104,35 @@ footer a {
 .campo label{
     margin-bottom: 10px;
     display: block;
+    text-align: center;
 
 }
 
 .campo input{
+    margin: 30px;
     width: 70%;
     padding: 20px;
     border-radius: 50px;
 }
 
 .button {
-    margin: 15px;
+    margin: 30px;
     color: black;
     background-color: grey;
-    width: 70%;
+    width: 85%;
     
 }
+
+textarea{
+    margin: 10%;
+    width: 70%;
+    height: 40%;
+}
+
+select{
+    margin-left: 120px;
+}
+
+
 
 
