--- a/styles/style.css
+++ b/styles/style.css
@@ -105,7 +105,7 @@ footer a {
         height: auto;
     }
     nav a{
-        flex-direction:;
+         flex-direction:left; 
     }
    
    
@@ -113,4 +113,6 @@ footer a {
         display: block;
  }
 }
+
+
  
