--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -23,15 +23,10 @@ nav{
 
 }
 
-.navegador a:hover{
-    background-color: black;
-    color: blanchedalmond;
-}
-
 .titulo{
-    width: 100%;
-    height: 100%;
-    
+    width: 70%;
+    height: 70%;
+    text-align: center;
 }
 
 i{
@@ -66,25 +61,25 @@ h1{
     width: auto;
     height: auto;
     align-items: center;
-    margin:auto;
-    
     
 }
 .formulario{
     background-color: yellow;
     margin: auto;
-    border: 5px solid rgb(57, 54, 54)
+    border: 5px solid rgb(57, 54, 54);
+    
+    
 
 }
+
+
+
+
+
 
 h2{
-    width: auto;
-    height: auto;
-    display: flex;
     text-align: center;
-}
-h3{
-    padding: 20px;
+    display: flex;
 }
 footer {
     display: flex;
@@ -104,35 +99,21 @@ footer a {
 .campo label{
     margin-bottom: 10px;
     display: block;
-    text-align: center;
 
 }
 
 .campo input{
-    margin: 30px;
     width: 70%;
     padding: 20px;
     border-radius: 50px;
 }
 
 .button {
-    margin: 30px;
+    margin: 15px;
     color: black;
     background-color: grey;
-    width: 85%;
+    width: 70%;
     
 }
-
-textarea{
-    margin: 10%;
-    width: 70%;
-    height: 40%;
-}
-
-select{
-    margin-left: 120px;
-}
-
-
 
 
