--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,7 @@ nav{
 
 
 #banner{
-    background-image: url("../img/pintureria\ siete\ colores\ \(1\).png");
+    background-image: url("../img/images.jpeg");
     background-size: cover;
     height: 550px;
     background-position: center;
@@ -105,7 +105,7 @@ footer a {
         height: auto;
     }
     nav a{
-         flex-direction:left; 
+        flex-direction:;
     }
    
    
@@ -113,6 +113,4 @@ footer a {
         display: block;
  }
 }
-
-
  
