--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -23,9 +23,12 @@ nav{
 
 }
 
+.navegador a:hover { background-color: black;
+    color: whitesmoke;}
+
 .titulo{
-    width: 70%;
-    height: 70%;
+    width: 100%;
+    height: 100%;
     text-align: center;
 }
 
@@ -53,6 +56,8 @@ main{
     
 }
 h1{
+    height: auto;
+    width: auto;
     text-align: center;
     
 }
@@ -67,18 +72,14 @@ h1{
     background-color: yellow;
     margin: auto;
     border: 5px solid rgb(57, 54, 54);
+    padding: 20px;
     
     
 
 }
 
-
-
-
-
-
 h2{
-    text-align: center;
+    margin-left: 250px;
     display: flex;
 }
 footer {
@@ -109,11 +110,29 @@ footer a {
 }
 
 .button {
-    margin: 15px;
+    margin: 40px;
     color: black;
     background-color: grey;
     width: 70%;
+    cursor: pointer;
+   
     
+    
+}
+
+.button:hover{
+    background-color: black;
+    color: honeydew;
+    padding: 4px;
+    
+    
+}
+
+.checkbox{
+    display: flex;
+    position: relative;
+    
+
 }
 
 
