--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -29,7 +29,7 @@ nav{
 .titulo{
     width: 100%;
     height: 100%;
-    text-align: center;
+    text-align:left;
 }
 
 i{
@@ -37,28 +37,33 @@ i{
     padding: 6px;
     margin: 10px;
     
+    
 }
 
 main{
     /* background-color: rgb(221, 133, 10); */
     border: none;
-    font-family: "Nanum Gothic Coding", monospace;
+    font-family:"Rubik",Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 400;
     font-style: normal;
 }
 .barra{
     display: flex;
-    background-image: url(/img/images.jpeg);
+    background-image: url(../img/fotocontacto.png);
     background-repeat: no-repeat;
-    background-size: 100%; 
+    background-size: cover; 
+    height: 450px;
+    background-position: center;
     color: ghostwhite;
     text-align: center;
+    margin-top:15px ;
     
 }
 h1{
     height: auto;
     width: auto;
     text-align: center;
+    color:black;
     
 }
 .form{
@@ -79,7 +84,8 @@ h1{
 }
 
 h2{
-    margin-left: 250px;
+    
+    margin-left: 500px; 
     display: flex;
 }
 footer {
