--- a/styles/productos.css
+++ b/styles/productos.css
@@ -1,9 +1,13 @@
+body{
+    font-family: "Rubik", sans-serif;
+    font-size: 24px;
+}
+
 nav{
     
     display: flex;
     justify-content:space-between; 
     background-color:yellow;
-    /* background-size: 100%; */
     padding: 0px 60px; 
     height: 60px;
     /* margin-bottom: 0px; */
@@ -11,7 +15,9 @@ nav{
     /* gap: 20px; */
     
 }
-
+.navegador h1{
+    font-size: 18px;
+}
 .navegador a{
   
     display:flex;
@@ -21,11 +27,10 @@ nav{
     font-size: 18px;
 
 }
-
 .titulo{
-    width: 100%;
-    height: 100%;
-    text-align:left;
+    width: 70%;
+    height: 70%;
+    text-align: center;
 }
 
 i{
@@ -35,10 +40,9 @@ i{
     
 }
 main{
-    /* background-color: rgb(221, 133, 10); */
-    
+
     border: none;
-    font-family: "Rubik",Verdana, Geneva, Tahoma, sans-serif;
+    font-family:"Rubik";
     font-weight: 400;
     font-style: normal;
     
@@ -47,14 +51,11 @@ main{
 }
 .barra{
     display: flex;
-    background-image: url(./img/fotonosotros.png);
+    background-image: url(/img/images.jpeg);
     background-repeat: no-repeat;
-    background-size: cover; 
-    height: 450px;
-    background-position: center;
+    background-size: 100%; 
     color: ghostwhite;
     text-align: center;
-    margin-top:15px ;
     
 }
 h1{
@@ -62,14 +63,48 @@ h1{
     
 }
 
+h2{
+    
+    border: none;
+    font-weight: 1000;
+    font-family: "Rubik", sans-serif;
+
+    
+   
+}
+
+h3{
+    
+    border: none;
+    font-weight: 400;
+    font-style: normal; 
+    font-size: 16px;
+    font-family: "Rubik", sans-serif;
+    
+    
+   
+}
+
 h4{
     
     border: none;
-    font-family: "Rubik";
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 400;
     font-style: normal;
+    font-family: "Rubik", sans-serif;
     
+    
+    
+   
+}
+
+
+li{
+    
+    border: none;
+    font-weight: 100;
+    font-style: normal;
+    font-family: "Rubik", sans-serif;
     
     
    
