--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -34,8 +34,7 @@ nav{
 
 i{
     display:flex;
-    padding: 6px;
-    margin: 10px;
+    padding: auto;
     
     
 }
@@ -84,9 +83,10 @@ h1{
 }
 
 h2{
-    
-    margin-left: 500px; 
-    display: flex;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+   
 }
 footer {
     display: flex;
@@ -161,5 +161,12 @@ footer a {
     width: auto;
     display: flex;
  }
+ .barra {
+    width: 80%;
+    height: 80%
+ }
  
+ h2{
+    text-align: center;
+ }
 }
