--- a/styles/sucursales.css
+++ b/styles/sucursales.css
@@ -88,3 +88,30 @@ li{
     
    
 }
+
+@media screen and (max-width: 767px) {
+    nav{
+        height: auto;
+    }
+    nav a{
+        display: flex;
+    }
+   
+   
+    .grid-contenedor {
+        display: block;
+ }
+ .navegador{
+    display: block;
+ }
+ .banner{
+    height: auto;
+    width: auto;
+    display: flex;
+ }
+ #barra {
+    display: flex;
+    width: 25%;
+    height: 25%
+ }
+}
