--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ nav{
     
     display: flex;
     justify-content:space-between; 
-    background-color:yellow;
+    background-color:rgb(255, 238, 0);
     padding: 0px 60px; 
     height: 60px;
     /* margin-bottom: 0px; */
@@ -16,6 +16,9 @@ nav{
     
 }
 .navegador h1{
+    font-size: 18px;
+}
+nav p{
     font-size: 18px;
 }
 .navegador a{
@@ -34,10 +37,16 @@ nav{
     background-size: cover;
     height: 550px;
     background-position: center;
+    margin-top: 15px;
     
 }
 .marcas-productos{
     margin: 20px 20px;
+}
+.titulo{
+    width: 100%;
+    height: 100%;
+    text-align:left;
 }
 .grid-contenedor{
     display: grid;
@@ -66,14 +75,14 @@ nav{
     
 }
 .product-detail{
-    background-color: #4669db;
+    background-color: #e98bec;
     position:absolute;
     bottom: -100%;
     width: 100%;
     max-height: 100%;
     transition: bottom 0.5s ease-in-out;
 }
-a .product-text{
+.product-text{
     color: black;
     margin: 5px 0px 0px 0px;
     line-height: 1.2em;
