--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -7,11 +7,11 @@
       src="https://kit.fontawesome.com/3c809bfe13.js"
       crossorigin="anonymous"></script>
     
-    <link rel="stylesheet" href="./styles/contacto.css" />
+    <link rel="stylesheet" href="../styles/contacto.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-    <link rel="icon" href="./img/7 C.png">
+    <link rel="icon" href="../img/7 C.png">
     <title>Contacto</title>
   </head>
   <body>
@@ -23,13 +23,15 @@
             class="fa-solid fa-paint-roller fa-bounce"
             style="color: #141414"></i><p>Pintureria Siete Colores</p>
         <!-- Nombre aleatorio se puede cambiar -->
-        <a href="./index.html">Inicio</a>
+        <a href="../index.html">Inicio</a>
 
         <!-- <a class="nos" href="./contacto.html">Contactanos</a> -->
 
-        <a href="./nosotros.html">Sobre Nosotros</a>
-
-        <a href="./sucursales.html">Sucursales</a>
+        
+           
+            <a href="./nosotros.html">Sobre Nosotros</a>
+            
+            <a href="./sucursales.html">Sucursales</a> 
       </nav>
       <!-- En el header solo deje el navegador, esto comentado lo pase al main con una section para que quede prolijo con el navegador -->
       <!-- 
