--- a/templates/alta_prod.html
+++ b/templates/alta_prod.html
@@ -31,15 +31,19 @@
         </nav>
     </header>
     <main>
-        <form action="">
-            <h3>Cargar productos</h3>
+
+
+        <form action="IngresosForm">
+            <!-- <h3> <a href="./crud-ingresos.html"></a></h3> -->
             
 
         </form>
+        
        
     </main>
 
     <footer>
+
         <a href="#">Encontranos en Argerich 4324, C.A.B.A., Argentina de Lunes a Viernes de 8.30 a 17.00.</a>
         
         <select name="Integrantes" id="">
