--- a/templates/crud-ingresos.html
+++ b/templates/crud-ingresos.html
@@ -36,7 +36,7 @@
     <main>
         <div class="container">
             <h1>Agregar Nuevo Producto</h1> <a href="../templates/alta_prod.html">Pintureria Siete colores</a>
-            <form id="IngresosForm">
+            <form id="IngresosForm"  enctype="multipart/form-data">
                 <input type="hidden" id="productId" name="ProductoId"> <!-- Campo oculto para almacenar el ID de la película -->
                 <label for="name">Nombre del producto</label>
                 <input type="text" id="name" name="name" required >
