--- a/templates/crud-ingresos.html
+++ b/templates/crud-ingresos.html
@@ -35,28 +35,31 @@
     </header>
     <main>
         <div class="container">
-            <h1>Agregar Nuevo Producto</h1> <a href="../templates/alta_prod.html">Pintureria Siete colores</a>
+            <h1>Agregar Nuevo Producto</h1> <a href="./ingreso.html">Pintureria Siete colores</a>
             <form id="IngresosForm"  enctype="multipart/form-data">
-                <input type="hidden" id="productId" name="ProductoId"> <!-- Campo oculto para almacenar el ID de la película -->
-                <label for="name">Nombre del producto</label>
-                <input type="text" id="name" name="name" required >
+                <input type="hidden" id="productoId" name="ProductoId"> <!-- Campo oculto para almacenar el ID de la película -->
+                <label for="nombre">Nombre del producto</label>
+                <input type="text" id="nombre" name="nombre" required >
                 
-                <label for="price">Precio</label>
-                <input type="number" id="price" name="price" required>
+                <label for="precio">Precio</label>
+                <input type="number" id="precio" name="precio" required>
 
                 <label for="imagenProducto">Imagen del producto:</label> 
                 <input type="file" id="imagenProducto" name="imagen">
 
-                <button onclick="obtener() loadProductos()" type="submit" id="btnSave">Agregar Producto</button>
+                <button onclick="loadProductos() " type="submit" id="btnSave">Agregar Producto</button>
                 <button type="button" id="cancelEdit">Cancelar</button>
             </form>
             <div id="message"></div>
             <h2>Listado de Productos</h2>
-            <ul id="productList"></ul>
+            <ul id="productoList"></ul>
             <script type="module" src="../crud-ingresos.js"></script>
         </div>
 
-
+        <!-- loadProductos() -->
+        <!-- obtener() -->
 
 
     </main>
+    </body>
+    </html>
