--- a/templates/crud-ingresos.html
+++ b/templates/crud-ingresos.html
@@ -47,7 +47,7 @@
                 <label for="imagenProducto">Imagen del producto:</label> 
                 <input type="file" id="imagenProducto" name="imagen">
 
-                <button onclick="loadProductos() " type="submit" id="btnSave">Agregar Producto</button>
+                <button onclick="loadProductos() obtener()" type="submit" id="btnSave">Agregar Producto</button>
                 <button type="button" id="cancelEdit">Cancelar</button>
             </form>
             <div id="message"></div>
@@ -56,8 +56,8 @@
             <script type="module" src="../crud-ingresos.js"></script>
         </div>
 
-        <!-- loadProductos() -->
-        <!-- obtener() -->
+        
+        
 
 
     </main>
