--- a/templates/ingreso.html
+++ b/templates/ingreso.html
@@ -44,8 +44,8 @@
         <!-- <h3>Ingreso para cargar productos</h3> -->
         <form id="form" action="" method="POST">
           <h3>Ingreso para cargar productos</h3>
-         <div> <label for="Nombre">Nombre: </label><input type="text" placeholder="Nombre de usuario"id="name"></div>
-         <div><label for="Contraseña">Contraseña: </label><input type="password" placeholder="Contraseña"id="password"></div>
+         <div> <label>Nombre: </label><input type="text" placeholder="Nombre de usuario"id="name"></div>
+         <div><label >Contraseña: </label><input type="password" placeholder="Contraseña"id="password"></div>
         
         <!-- </form> -->
         <input onclick=logear() type="button" value="Enviar" class="button" > <a href="./crud-ingresos.html"></a>
